--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "lnd-grpc": "^0.5.4",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "sqlite3": "^5.1.7"
   }
 }
